# animus

./: .containerignore  .dockerignore  .env.example  .gitignore  BACKLOG.md  CONSTITUTION.md  CONTRIBUTING.md  Cargo.toml  Containerfile  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  compose.yaml
.opencode/: package.json
.opencode/plugins/: nats.ts
animus-provider-hunter/: hunter.py  imap_client.py  registrar.py  requirements.txt
crates/animus-channel/: Cargo.toml
crates/animus-channel/src/: bus.rs  lib.rs  message.rs  permission_gate.rs  plugin.rs  router.rs  scanner.rs
crates/animus-channel/src/nats/: mod.rs
crates/animus-channel/src/telegram/: api.rs  mod.rs
crates/animus-core/: Cargo.toml
crates/animus-core/src/: api_tracker.rs  budget.rs  capability.rs  config.rs  content_sensitivity.rs  embedding.rs  error.rs  identity.rs  lib.rs  mesh.rs  model_capability.rs  provider_catalog.rs  provider_meta.rs  rate_limit.rs  segment.rs  sensorium.rs  succession.rs  threading.rs  tier.rs
crates/animus-cortex/: Cargo.toml
crates/animus-cortex/src/: capability_registry.rs  engine_registry.rs  lib.rs  model_plan.rs  model_scorer.rs  perception.rs  reconstitution.rs  reflection.rs  scheduler.rs  situational_awareness.rs  smart_router.rs  task_manager.rs  telos.rs  thread.rs  watcher.rs
crates/animus-cortex/src/llm/: anthropic.rs  mod.rs  openai_compat.rs
crates/animus-cortex/src/tools/: analyze_image.rs  claude_instances.rs  delete_segment.rs  federate_segment.rs  get_capability_state.rs  get_classification_patterns.rs  get_mesh_roles.rs  get_route_stats.rs  http_fetch.rs  list_segments.rs  list_snapshots.rs  manage_watcher.rs  mod.rs  nats_publish.rs  propose_route_amendment.rs  prune_segments.rs  read_file.rs  register_provider.rs  remember.rs  restore_snapshot.rs  send_signal.rs  set_autonomy.rs  shell_exec.rs  snapshot_memory.rs  spawn_task.rs  task_cancel.rs  task_output.rs  task_status.rs  telegram_send.rs  update_classification_pattern.rs  update_segment.rs  write_file.rs
crates/animus-cortex/src/watchers/: capability_probe.rs  comms.rs  mod.rs  model_health.rs  providers.rs  segment_pressure.rs  sensorium_health.rs
crates/animus-embed/: Cargo.toml
crates/animus-embed/src/: lib.rs  ollama.rs  resilient.rs  synthetic.rs
crates/animus-federation/: Cargo.toml
crates/animus-federation/src/: audit.rs  auth.rs  client.rs  discovery.rs  handoff.rs  knowledge.rs  lib.rs  orchestrator.rs  peers.rs  protocol.rs  server.rs
crates/animus-interface/: Cargo.toml
crates/animus-interface/src/: lib.rs  terminal.rs
crates/animus-mnemos/: Cargo.toml
crates/animus-mnemos/src/: assembler.rs  consolidator.rs  evictor.rs  lib.rs  quality.rs
crates/animus-runtime/: Cargo.toml
crates/animus-runtime/src/: bootstrap.rs  main.rs
crates/animus-sensorium/: Cargo.toml
crates/animus-sensorium/src/: attention.rs  audit.rs  bus.rs  consent.rs  glob.rs  lib.rs  orchestrator.rs  policy_store.rs  sensitivity.rs
crates/animus-sensorium/src/sensors/: clipboard_monitor.rs  file_watcher.rs  mod.rs  network_monitor.rs  process_monitor.rs
crates/animus-tests/: Cargo.toml
crates/animus-tests/src/: lib.rs
crates/animus-tests/tests/integration/: cortex_reasoning.rs  engine_registry.rs  federation_audit.rs  federation_auth.rs  federation_e2e.rs  federation_knowledge.rs  federation_peers.rs  federation_protocol.rs  full_pipeline.rs  health_routing.rs  identity.rs  identity_lifecycle.rs  main.rs  mnemos_assembly.rs  mnemos_eviction.rs  perception.rs  quality_gate.rs  reconstitution.rs  reflection.rs  sensorium_attention.rs  sensorium_audit.rs  sensorium_bus.rs  sensorium_consent.rs  sensorium_file_watcher.rs  sensorium_full_pipeline.rs  sensorium_network_monitor.rs  sensorium_orchestrator.rs  sensorium_policy_store.rs  sensorium_process_monitor.rs  sensorium_types.rs  telos_goals.rs  thompson_sampling.rs  threading_scheduler.rs  threading_signals.rs  threading_types.rs  tool_use.rs  vectorfs_basic.rs  vectorfs_tiering.rs
crates/animus-vectorfs/: Cargo.toml
crates/animus-vectorfs/src/: index.rs  lib.rs  quality_gate.rs  store.rs  tier_manager.rs
crates/animus-voice/: Cargo.toml
crates/animus-voice/scripts/: transcribe.swift
crates/animus-voice/src/: lib.rs
docs/: 00-genesis-conversation.md  00-genesis-transcript.md  01-presenting-animus-publicly.md  ARCHITECTURE.md  comms-protocol.md  opencode-integration.md
docs/plans/: 2026-03-21-phase1-vectorfs-mnemos.md
docs/specs/: 2026-03-21-animus-design.md
docs/superpowers/plans/: 2026-03-21-phase2-cortex-interface-runtime.md  2026-03-21-phase3-sensorium.md  2026-03-21-phase4-multithreading-signaling.md  2026-03-22-cognitive-architecture-plan1-foundation.md  2026-03-22-phase5-federation.md  2026-03-23-async-task-execution.md  2026-03-23-nuntius.md  2026-03-23-watcher-subsystem.md  2026-03-24-unified-identity.md  2026-03-26-cognitive-resource-management.md  2026-03-26-rate-limit-tracking.md  2026-03-27-provider-health-weighted-routing.md
docs/superpowers/specs/: 2026-03-21-phase5-federation-design.md  2026-03-22-animus-persistent-agent-design.md  2026-03-22-cognitive-architecture-design.md  2026-03-23-animus-claude-code-protocol-readme.md  2026-03-23-animus-claude-code-protocol.py  2026-03-23-async-task-execution-design.md  2026-03-23-memory-consolidation-plan.md  2026-03-23-nuntius-design.md  2026-03-23-watcher-subsystem-design.md  2026-03-24-unified-identity-design.md  2026-03-26-animus-snapshot-backup-design.md  2026-03-26-cognitive-architecture-implementation.md  2026-03-26-cognitive-resource-management-design.md  2026-03-26-memory-architecture-v2-design.md  2026-03-26-rate-limit-tracking-design.md  2026-03-27-provider-health-weighted-routing-design.md
scripts/: backup-animus.sh  mount-synology.sh  restore-animus.sh
