[workspace]
resolver = "2"
members = [
    "crates/animus-core",
    "crates/animus-vectorfs",
    "crates/animus-mnemos",
    "crates/animus-embed",
    "crates/animus-cortex",
    "crates/animus-sensorium",
    "crates/animus-interface",
    "crates/animus-runtime",
    "crates/animus-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/JaredCluff/animus"

[workspace.dependencies]
animus-core = { path = "crates/animus-core" }
animus-vectorfs = { path = "crates/animus-vectorfs" }
animus-mnemos = { path = "crates/animus-mnemos" }
animus-embed = { path = "crates/animus-embed" }
animus-cortex = { path = "crates/animus-cortex" }
animus-sensorium = { path = "crates/animus-sensorium" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
tempfile = "3"
async-trait = "0.1"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json"] }
notify = "7"
sysinfo = "0.33"
