[package]
name = "animus-channel"
version = "0.1.0"
edition = "2021"

[dependencies]
animus-core = { path = "../animus-core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = { workspace = true }
