[package]
name = "animus-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }
async-trait = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
