[package]
name = "animus-cortex"
version = "0.1.0"
edition = "2021"

[dependencies]
animus-core = { path = "../animus-core" }
animus-vectorfs = { path = "../animus-vectorfs" }
animus-mnemos = { path = "../animus-mnemos" }
animus-sensorium = { path = "../animus-sensorium" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json", "multipart"] }
url = "2"
base64 = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
animus-embed = { workspace = true }
tempfile = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
