[package]
name = "animus-embed"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
animus-core = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
