[package]
name = "animus-mnemos"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
animus-core = { workspace = true }
animus-vectorfs = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
