[package]
name = "animus-runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "animus"
path = "src/main.rs"

[dependencies]
animus-core = { path = "../animus-core" }
animus-vectorfs = { path = "../animus-vectorfs" }
animus-mnemos = { path = "../animus-mnemos" }
animus-embed = { path = "../animus-embed" }
animus-cortex = { path = "../animus-cortex" }
animus-interface = { path = "../animus-interface" }
animus-sensorium = { workspace = true }
animus-federation = { workspace = true }
animus-channel = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
toml = { workspace = true }
