[package]
name = "animus-sensorium"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
animus-core = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
sysinfo = { workspace = true }
parking_lot = { workspace = true }
