[package]
name = "animus-voice"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
animus-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json", "multipart"] }
